--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.11.0",
@@ -25,6 +26,7 @@
     "typescript-eslint": "^8.8.1"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
