--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "nodemon src/index.ts"
+    "start:dev": "nodemon src/index.ts",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
