--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
@@ -28,6 +29,7 @@
     "typescript-eslint": "^8.8.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1"
   }
